Updated jsMinified styles.Updated jsRemoved jquery gallery plugin.Style updates.Accessibility fix: Added text to global search label.Added button text.Updated colour contrast in stylesheet.Removed markup no longer used.Updated colour contrast in stylesheet.Added button text.Accessibility fix: Added text to global search label.Style updates.

--- a/armytheme/src/css/styles.less
+++ b/armytheme/src/css/styles.less
@@ -91,14 +91,14 @@
     .body-wrap {
         background: #f1f1f1;
     }
-
+    
     .btn-label {
-    font-size: 0;
-    height: 1px;
-    overflow: hidden;
-    display: block;
-}
-
+        font-size: 0;
+        height: 1px;
+        overflow: hidden;
+        display: block;
+        display: block;
+    }
     
     body {
         position: relative;
@@ -953,8 +953,9 @@
     .pane-bean-follow-us {
         #gradient.vertical-black-2;
         padding: 15px;
-
-        .author-by {margin-left:0;}
+        .author-by {
+            margin-left: 0;
+        }
         h2 {
             .inline-block();
             margin: 0;
@@ -1510,8 +1511,7 @@
                 transition: background .5s ease-out;
                 margin-bottom: -1px;
                 &:hover,
-                &:focus
-                {
+                &:focus {
                     color: @brand-red;
                     border: 0;
                     background: none;
